# LogBack

./: .dockerignore  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md  docker-compose.yml  dprint.json
.cargo/: config.toml
.sqlx/: query-36580cc8ba7aa9af77e41b392f96a30819865b2579fdf116664f15aec1b84549.json  query-3871c6c7b4ed8e686b3444133f7fbd68ba6378975df6ce0df0bd662bb0facd3c.json  query-39a2daf09df66b3d9a31e46f721f0c2e5dce8f485f8418d21d6a21d47763e95f.json  query-416d68ec47efd0f032bee88bc8c48093f41751b19a1bfe5b540919f890ab9b44.json  query-53bf9ff6b89963e2b2ce95be266e652c3298e5b0e69a3aeecad0aeda91cb9755.json  query-54164b4fca6edeb5773d6bcf861f41fb5bd843277b6d97ae03c5110f630fcaf6.json  query-83892f8a3bb0a1d6dc408ecc54812b2e0e3089c1c6fde683fdb703342f5f76aa.json  query-9fef407e673d764be36d8897c4a33e63f6a87ee6e903a7ba089e20a0b3c2a52d.json  query-a04014a3fc136814bf88b586fafa0c688a658ba67f6d84a689f53372e6d8a9a2.json  query-c45d0837fa4e6b108c3cbfb990dd33fd2eec56f564217bf88e5c23a889c59ac4.json  query-d02156b09686999e606495c6df593baf1f0796a86890d54201ae1e1e937cb652.json  query-d4f7f8c611bbc99715fd79f8ac69a8c97c0ef11eae940f0493b29e7656b4aadf.json
migrations/: 0001_crear_dominio_color.down.sql  0001_crear_dominio_color.up.sql  0002_crear_tabla_tipos.down.sql  0002_crear_tabla_tipos.up.sql  0003_crear_tabla_estados.down.sql  0003_crear_tabla_estados.up.sql  0004_crear_tabla_entradas.down.sql  0004_crear_tabla_entradas.up.sql  0005_crear_estados_iniciales.down.sql  0005_crear_estados_iniciales.up.sql  0006_crear_tipos_iniciales.down.sql  0006_crear_tipos_iniciales.up.sql  0007_crear_tabla_usuarios.up.sql
public/: site.webmanifest
src/: auth.rs  config.rs  database.rs  lib.rs  main.rs  middleware.rs  server.rs  templates.rs
src/database/: entradas.rs  estados.rs  mod.rs  tipos.rs  usuarios.rs
src/routes/: index.rs  mod.rs
src/routes/entradas/: delete.rs  get.rs  mod.rs  post.rs  put.rs
src/routes/usuarios/: get.rs  mod.rs  post.rs
src/rutas/: index.rs  mod.rs
