[package]
name = "logback"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.98"
compact_str = { version = "0.9.0", features = ["serde", "sqlx", "sqlx-postgres", "zeroize"] }
config = { version = "0.15.11", default-features = false, features = ["toml"] }
env_logger = "0.11.8"
log = "0.4.27"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
