[package]
name = "logback"
version = "0.1.0"
edition = "2024"
authors = ["Samuel David Rojas Vallejo <samueldavidrojasvallejo@gmail.com>"]
description = "Aplicación para administrar listas de pendientes."

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "logback"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev.package.sqlx-macros]
opt-level = 3

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.98"
compact_str = { version = "0.9.0", features = [
  "serde",
  "sqlx",
  "sqlx-postgres",
  "zeroize",
] }
config = { version = "0.15.11", default-features = false, features = ["toml"] }
env_logger = "0.11.8"
log = "0.4.27"
maud = { version = "0.27.0", features = ["actix-web"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
sqlx = { version = "0.8.6", default-features = false, features = [
  "chrono",
  "derive",
  "macros",
  "migrate",
  "postgres",
  "runtime-tokio",
  "tls-rustls",
  "uuid",
] }
